[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/first_party/assets/basic_2d_assets/polygons/square/square_regular_40.png" type="Texture" id=1]
[ext_resource path="res://addons/first_party/assets/basic_2d_assets/polygons/square/square_filled_40.png" type="Texture" id=2]
[ext_resource path="res://game/world/game_world.gd" type="Script" id=3]
[ext_resource path="res://game/items/pickup_bomb.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/items/speed_pad.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/world/ground_03_rock.PNG" type="Texture" id=6]
[ext_resource path="res://game/world/ground_03.PNG" type="Texture" id=7]
[ext_resource path="res://game/world/ground_01.PNG" type="Texture" id=8]
[ext_resource path="res://game/world/ground_02_rock.PNG" type="Texture" id=9]
[ext_resource path="res://game/world/ground_04_rock.PNG" type="Texture" id=10]
[ext_resource path="res://game/world/ground_02.PNG" type="Texture" id=11]
[ext_resource path="res://game/world/ground_01_rock.PNG" type="Texture" id=12]
[ext_resource path="res://game/world/ground_04.PNG" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 40, 0, 40, 40, 0, 40 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 39.9052, 40, 0.17485, 40, 0.17485, 0, 39.9052, 0 )

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 40, 40, 0.17485, 40, 0.17485, 0.336365, 40, 0.336365 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 40, 40, 0.17485, 40, 0.17485, 0.336365, 40, 0.336365 ) ]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 40, 40, 0.0133362, 40, 0.0133362, 0.336365, 40, 0.336365 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 40, 40, 0.336349, 40, 0.336349, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 40, 40, 0, 40, 0, 0.0133362, 40, 0.0133362 )

[sub_resource type="TileSet" id=1]
0/name = "square_regular_40.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 40, 40 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "square_filled_40.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "ground_01.PNG 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 40, 40 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "ground_02.PNG 3"
3/texture = ExtResource( 11 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 40, 40 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "ground_03.PNG 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 40, 40 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "ground_04.PNG 5"
5/texture = ExtResource( 13 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 40, 40 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ground_01_rock.PNG 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 40, 40 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 5 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "ground_02_rock.PNG 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 40, 40 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/navigation = SubResource( 9 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 6 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "ground_03_rock.PNG 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 40, 40 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 7 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "ground_04_rock.PNG 9"
9/texture = ExtResource( 10 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 40, 40 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 8 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1000, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 800 )

[node name="GameWorld" type="Node2D"]
script = ExtResource( 3 )

[node name="tile_map" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
cell_custom_transform = Transform2D( 40, 0, 0, 40, 0, 0 )
cell_tile_origin = 1
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 7, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 7, 0, 65540, 7, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 7, 0, 65553, 3, 0, 65554, 3, 0, 65555, 7, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 131072, 3, 0, 131073, 7, 0, 131074, 7, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 7, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 7, 0, 131089, 3, 0, 131090, 3, 0, 131091, 7, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 7, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 7, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 7, 0, 196632, 7, 0, 196633, 7, 0, 196634, 7, 0, 196635, 7, 0, 196636, 7, 0, 196637, 7, 0, 196638, 7, 0, 196639, 7, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 7, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 7, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 7, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 7, 0, 327688, 3, 0, 327689, 3, 0, 327690, 7, 0, 327691, 7, 0, 327692, 7, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 7, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 7, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 393216, 7, 0, 393217, 7, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 7, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 7, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 7, 0, 393237, 7, 0, 393238, 7, 0, 393239, 7, 0, 393240, 3, 0, 393241, 3, 0, 393242, 7, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 7, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 7, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 7, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 7, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 7, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 7, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 7, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 7, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 7, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 7, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 7, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 7, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 7, 0, 720923, 7, 0, 720924, 7, 0, 720925, 7, 0, 720926, 3, 0, 720927, 7, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 7, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 7, 0, 786459, 7, 0, 786460, 7, 0, 786461, 7, 0, 786462, 3, 0, 786463, 7, 0, 851968, 3, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 7, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 7, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 851996, 7, 0, 851997, 7, 0, 851998, 3, 0, 851999, 7, 0, 917504, 7, 0, 917505, 7, 0, 917506, 7, 0, 917507, 7, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 7, 0, 917520, 7, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 7, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 7, 0, 917531, 7, 0, 917532, 3, 0, 917533, 3, 0, 917534, 3, 0, 917535, 7, 0, 983040, 3, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 7, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 7, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 7, 0, 983067, 7, 0, 983068, 3, 0, 983069, 3, 0, 983070, 3, 0, 983071, 7, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 7, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 7, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 7, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 7, 0, 1048603, 7, 0, 1048604, 3, 0, 1048605, 3, 0, 1048606, 3, 0, 1048607, 7, 0, 1114112, 3, 0, 1114113, 3, 0, 1114114, 3, 0, 1114115, 3, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 7, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 7, 0, 1114133, 3, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1114139, 3, 0, 1114140, 3, 0, 1114141, 7, 0, 1114142, 7, 0, 1114143, 7, 0 )

[node name="spawn_points" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="spawn_points"]
position = Vector2( 140, 460 )

[node name="2" type="Position2D" parent="spawn_points"]
position = Vector2( 940, 620 )

[node name="3" type="Position2D" parent="spawn_points"]
position = Vector2( 860, 140 )

[node name="4" type="Position2D" parent="spawn_points"]
position = Vector2( 100, 140 )

[node name="5" type="Position2D" parent="spawn_points"]
position = Vector2( 60, 660 )

[node name="6" type="Position2D" parent="spawn_points"]
position = Vector2( 540, 660 )

[node name="7" type="Position2D" parent="spawn_points"]
position = Vector2( 1180, 60 )

[node name="8" type="Position2D" parent="spawn_points"]
position = Vector2( 1180, 300 )

[node name="players" type="Node2D" parent="."]

[node name="BombPickup" parent="." instance=ExtResource( 4 )]
position = Vector2( 620, 660 )

[node name="BombPickup2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1220, 260 )

[node name="BombPickup4" parent="." instance=ExtResource( 4 )]
position = Vector2( 220, 180 )

[node name="spawn_root" type="Node2D" parent="."]

[node name="SpeedPad" parent="." instance=ExtResource( 5 )]
position = Vector2( 140, 660 )

[node name="SpeedPad2" parent="." instance=ExtResource( 5 )]
position = Vector2( 740, 660 )
rotation = -1.5708

[node name="SpeedPad3" parent="." instance=ExtResource( 5 )]
position = Vector2( 380, 460 )
rotation = 4.71239

[node name="SpeedPad7" parent="." instance=ExtResource( 5 )]
position = Vector2( 140, 100 )
rotation = 1.5708

[node name="SpeedPad4" parent="." instance=ExtResource( 5 )]
position = Vector2( 780, 220 )
rotation = 1.5708

[node name="SpeedPad5" parent="." instance=ExtResource( 5 )]
position = Vector2( 540, 100 )
rotation = 3.14159

[node name="SpeedPad6" parent="." instance=ExtResource( 5 )]
position = Vector2( 1220, 620 )
rotation = 4.71239

[node name="top_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
position = Vector2( 660, -39 )
shape = SubResource( 3 )

[node name="bottom_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_wall"]
position = Vector2( 662, 760 )
shape = SubResource( 3 )

[node name="right_wall" type="StaticBody2D" parent="."]
position = Vector2( 475, 515 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_wall"]
position = Vector2( 845, -146 )
shape = SubResource( 4 )

[node name="left_wall" type="StaticBody2D" parent="."]
position = Vector2( -885, 574 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_wall"]
position = Vector2( 845, -146 )
shape = SubResource( 4 )
